style.css
* {
  border: 1px solid blue;
}

#title, #description {
  margin: auto;
  text-align: center;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -ms-flex-wrap: wrap;
      flex-wrap: wrap;
}

.credPart {
  margin: auto;
  text-align: center;
}

.labelChunk {
  display: inline-block;
  float: left;
  width: 49%;
  text-align: right;
}

.inputChunk {
  display: inline-block;
  float: right;
  width: 49%;
  text-align: left;
}
/*# sourceMappingURL=style.css.map */

